# pyedl

./: .gitignore  README.md  pyproject.toml
examples/: capacitance.py  energy.py  fitting.py
src/pyedl/: __init__.py  fitting.py  plotting.py  utils.py
src/pyedl/materials/: __init__.py  ions.py  solvents.py
src/pyedl/models/: __init__.py  _numba.py  base.py  steric.py
tests/: conftest.py  test_core_regressions.py  test_plotting_api.py  test_validation_cases.py
validation/: README.md
