[project]
name = "pyedl"
version = "0.1.0"
description = "Semianalytical models for Electric Double Layers (EDL) including capacitance and free energy calculations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

